--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-db.driver=com.mysql.cj.jdbc.Driver
+db.driver=com.mysql.jdbc.Driver
 db.host=jdbc:mysql://localhost
 db.port=3306
-db.name=onlinebookstore
+db.name=onlinestore
 db.username=root
-db.password=root
+db.password=root1234
